logs/dag_id=process_data/run_id=manual__2023-09-23T093112.091607+0000/task_id=get_data/attempt=1.log
[2023-09-23T09:31:12.672+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: process_data.get_data manual__2023-09-23T09:31:12.091607+00:00 [queued]>
[2023-09-23T09:31:12.682+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: process_data.get_data manual__2023-09-23T09:31:12.091607+00:00 [queued]>
[2023-09-23T09:31:12.683+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-09-23T09:31:12.684+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-09-23T09:31:12.684+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-09-23T09:31:12.697+0000] {taskinstance.py:1383} INFO - Executing <Task(_PythonDecoratedOperator): get_data> on 2023-09-23 09:31:12.091607+00:00
[2023-09-23T09:31:12.702+0000] {standard_task_runner.py:55} INFO - Started process 8413 to run task
[2023-09-23T09:31:12.705+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'process_data', 'get_data', 'manual__2023-09-23T09:31:12.091607+00:00', '--job-id', '69', '--raw', '--subdir', 'DAGS_FOLDER/data_retrieval.py', '--cfg-path', '/tmp/tmpilbrddjk']
[2023-09-23T09:31:12.706+0000] {standard_task_runner.py:83} INFO - Job 69: Subtask get_data
[2023-09-23T09:31:12.765+0000] {task_command.py:376} INFO - Running <TaskInstance: process_data.get_data manual__2023-09-23T09:31:12.091607+00:00 [running]> on host c71b9a166a04
[2023-09-23T09:31:12.827+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=process_data
AIRFLOW_CTX_TASK_ID=get_data
AIRFLOW_CTX_EXECUTION_DATE=2023-09-23T09:31:12.091607+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-09-23T09:31:12.091607+00:00
[2023-09-23T09:31:12.837+0000] {base.py:71} INFO - Using connection ID 'pgdatabase' for task execution.
[2023-09-23T09:31:12.845+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/decorators/base.py", line 188, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/data_retrieval.py", line 21, in get_data
    cur.copy_expert("COPY machine_learning_customerchurn FROM STDIN WITH SCV HEADER DELIMITER AS ',' QUOTE '\"'", file,)
psycopg2.errors.SyntaxError: syntax error at or near "SCV"
LINE 1: ...PY machine_learning_customerchurn FROM STDIN WITH SCV HEADER...
                                                             ^

[2023-09-23T09:31:12.856+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=process_data, task_id=get_data, execution_date=20230923T093112, start_date=20230923T093112, end_date=20230923T093112
[2023-09-23T09:31:12.869+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 69 for task get_data (syntax error at or near "SCV"
LINE 1: ...PY machine_learning_customerchurn FROM STDIN WITH SCV HEADER...
                                                             ^
; 8413)
[2023-09-23T09:31:12.877+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-09-23T09:31:12.897+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
